--- a/ClienteFinalJSF/nbproject/project.properties
+++ b/ClienteFinalJSF/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${file.reference.postgresql-42.2.18.jar}:\
     ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+    ${libs.restlib.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
